2003-11-21  Will Duquette  <will@cordelia.local>

	* snit.tcl:      Updated version to 0.91.
	* pkgIndex.tcl: 
	* snit.tcl:      Added the "expose" statement to type and widget
	                 definitions.
	* snit.test:     Added appropriate tests.
	* snit.html:     Added documentation for "expose".
	* faq.html:      Updated the FAQ entries.


2003-10-28  Andreas Kupries  <andreask@activestate.com>

	* snit.man:    Fixed typos in documentation.
	* snitfaq.man: 

2003-10-27  Will Duquette  <will@wjduquette.com>

	* snit.html: Fixed typos in documentation.
	* faq.html:

2003-10-27  Andreas Kupries  <andreask@activestate.com>

	* snit.man:    Updated to changes in the .html files.
	* snitfaq.man: 

2003-10-25  Will Duquette  <will@wjduquette.com>

	* snit.tcl:  Added the "except" clause for "delegate method *" and
	* snit.test: "delegate option *".  This allows the user to
	  	     explicitly exclude certain methods and options.
		     Added appropriate tests.

	* snit.html: Gave the Snit FAQ a bit of an overhaul, and added 
	* faq.html:  information corresponding to the recent code
	  	     changes, including a great deal of material on Snit
		     and the Tk option database.  Updated the Snit man
		     page to be consistent with the recent code changes.

2003-10-23  Andreas Kupries  <andreask@activestate.com>

	* snit.man: Updated from Will's html doc's.

2003-10-23  Will Duquette  <will@wjduquette.com>

	* snit.html: Added documentation for the new "hulltype",
	  	     "widgetclass", and "install" commands.  Updated the
	  	     documentation for "installhull" to show the new
	  	     "installhull using" syntax.  Updated the
	  	     documentation for "option" and "delegate option" to
	  	     show how to specify the resource and class names for
	  	     options.  Added a section on the interaction between
	  	     Snit and the Tk option database.

2003-10-21  Will Duquette  <will@wjduquette.com>
