@@ -3388,6 +3388,57 @@ test iinfo-1.10 {info options with exceptions} tk {
     set a
 } {-bd -bg -borderwidth -class -colormap -container -cursor -foo -height -highlightbackground -highlightcolor -highlightthickness -padx -pady -relief -takefocus -visual -width}
 
+test iinfo-1.11 {object info typevars with pattern} {
+    cleanup
+
+    type dog { 
+        typevariable thisvar 1
+
+        constructor {args} {
+            typevariable thatvar 2
+        }
+    }
+
+    dog create spot
+    spot info typevars *this*
+} {::dog::thisvar}
+
+test iinfo-1.12 {object info vars with pattern} {
+    cleanup
+
+    type dog { 
+        variable hisvar 1
+
+        constructor {args} {
+            variable hervar
+            set hervar 2
+        }
+    }
+
+    dog create spot
+    spot info vars "*his*"
+} {::dog::Snit_inst1::hisvar}
+
+test iinfo-1.13 {info options with pattern} tk {
+    cleanup
+
+    widgetadaptor myframe { 
+        option -foo a
+        delegate option * to hull
+        constructor {args} {
+            installhull [frame $self]
+        }
+    }
+    myframe .frm
+
+    set a [lsort [.frm info options -c*]]
+    destroy .frm
+    tkbide
+    set a
+} {-class -colormap -container -cursor}
+
+
+
 #-----------------------------------------------------------------------
 # Type Introspection
 
@@ -3405,9 +3456,9 @@ test tinfo-1.2 {type info too many args} {
 
     type dog { }
 
-    catch {dog info instances foo} result
+    catch {dog info instances foo bar} result
     set result
-} {wrong # args: should be "::snit::TypeInfo_instances type"}
+} {wrong # args: should be "::snit::TypeInfo_instances type ?pattern?"}
 
 test tinfo-1.3 {type info typevars} {
     cleanup
@@ -3469,6 +3520,32 @@ test tinfo-1.6 {type info instances with non-global namespaces} {
 
     list $qname [lsort [dog info instances]]
 } {::dogs::fido {::dogs::fido ::spot}}
+
+test tinfo-1.7 {type info typevars with pattern} {
+    cleanup
+
+    type dog { 
+        typevariable thisvar 1
+
+        constructor {args} {
+            typevariable thatvar 2
+        }
+    }
+
+    dog create spot
+    dog info typevars *this*
+} {::dog::thisvar}
+
+test tinfo-1.8 {type info instances with pattern} {
+    cleanup
+
+    type dog { }
+
+    dog create spot
+    dog create fido
+
+    dog info instances "*f*"
+} {::fido}
 
 #-----------------------------------------------------------------------
 # Setting the widget class explicitly
