@@ -2,11 +2,17 @@
 
 	* snit.tcl:      Updated version to 0.91.
 	* pkgIndex.tcl: 
+
 	* snit.tcl:      Added the "expose" statement to type and widget
 	                 definitions.
 	* snit.test:     Added appropriate tests.
 	* snit.html:     Added documentation for "expose".
 	* faq.html:      Updated the FAQ entries.
+
+	* snit.tcl:      Added "string match" patterns to the Snit info
+	                 methods.
+	* snit.test:     Added appropriate tests.
+	* snit.html:     Updated documentation.
 
 
 2003-10-28  Andreas Kupries  <andreask@activestate.com>
